2001-11-06  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/powerpc/sysdep.h: Include sysdeps/unix/powerpc/sysdep.h
	instead of sysdeps/powerpc/elf/sysdep.h and sysdeps/unix/sysdep.h.

	* sysdeps/unix/sysv/linux/powerpc/sysdep.h: Don't include
	sysdeps/powerpc/elf/sysdep.h.
	Reported by Kaoru Fukui <k_fukui@highway.ne.jp>.

2001-11-05  Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (process_dl_debug): Rewritten.  Optimized for size not
	speed.
	(process_envvars): Some more optimizations.
	* sysdeps/generic/ldsodefs.h (DL_DEBUG_HELP): New macro.

	* elf/elf.h: Add dynamic tag definitions for prelinking.

	* elf/rtld.c (process_envvars): Avoid using array of string pointers.
	Rewrite code to remove environment varables for SUID binaries.
	Small optimization in LD_PROFILE handling.
	* sysdeps/generic/unsecvars.h: Adjust format for process_envvars
	changes.
	* sysdeps/unix/sysv/linux/i386/dl-librecon.h: Likewise.

	* sysdeps/generic/dl-sysdep.c: Don't initialize _dl_cpuclock_offset.

	* elf/dl-reloc.c (_dl_reloc_bad_type): Rewrite to not use writable
	strings.  Change type of second parameter.
	* sysdeps/generic/ldsodefs.h: Adjust _dl_reloc_bad_type prototype
	for last change.

	* io/fts.h: Prevent using <fts.h> with _FILE_OFFSET_BITS=64.

2001-11-04  Joseph S. Myers  <jsm28@cam.ac.uk>

	* manual/string.texi: Fix typos.
	* manual/examples/argp-ex2.c: Likewise.

2001-11-05  Roland McGrath  <roland@frob.com>

	* sysdeps/powerpc/elf/sysdep.h: Remove this file, because it overrides
	the more-specific unix/sysv/linux/powerpc file and breaks everything.
	* sysdeps/powerpc/sysdep.h (ALIGNARG, ASM_TYPE_DIRECTIVE,
	ASM_SIZE_DIRECTIVE, CALL_MCOUNT, ENTRY, EALIGN, DO_CALL, JUMPTARGET,
	PSEUDO, PSEUDO_RET, PSEUDO_END, L, C_TEXT): These macros moved here
	here, put under [__ELF__].

2001-11-05  Ulrich Drepper  <drepper@redhat.com>

	* manual/charset.texi: Extensive editing work.
	* manual/nss.texi: Likewise.
	Changes by Dennis Grace <dgrace@us.ibm.com>.
