@@ -1,3 +1,9 @@
+2001-11-06  Ulrich Drepper  <drepper@redhat.com>
+
+	* elf/dl-load.c (decompose_rpath): Optimize error handling for size.
+	(_dl_init_paths): Likewise.
+	(_dl_map_object_from_fd): Likewise.
+
 2001-11-06  Roland McGrath  <roland@frob.com>
 
 	* sysdeps/mach/powerpc/sysdep.h: Include sysdeps/unix/powerpc/sysdep.h
